--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,7 +24,7 @@ html(lang="en" dir="ltr")
           p I have been on a lifelong journey of helping others solve problems in different capacities. Now that journey is taking me to the wonderful world of coding. Here are a few of my projects I've worked on that highlight some of my skills as a developer.
 
           //- Add path from your '/about' route handler to the href below
-          a(href='') Learn More &rarr;
+          a(href='./about') Learn More &rarr;
 
     .wrapper
       .header
@@ -32,7 +32,7 @@ html(lang="en" dir="ltr")
           button#menu-icon.menu-icon(type='button' data-toggle='my-info')
 
           //- Replace with your name — this is for the mobile layout
-          span Name
+          span Jeanene Cannon
 
       block content
 
