--- a/views/about.pug
+++ b/views/about.pug
@@ -11,23 +11,17 @@ block content
     .inner-wrapper.flex-row-wrap.two-col
       .about-intro-box.box
 
-        //- Replace with your name
         h1 Jeanene Cannon
 
-        //- Feel free to personalize the title below
         p Full Stack JavaScript Developer
-
 
         .about-bio
 
-          //- Replace the boilerplate below with your best elevator pitch
           p This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
-
 
       .skills-contact-box.box
         h6 Skills
 
-        //- Replace skills below with your own skills — at this point, you should be able to list as many as ten skills
         ul
           li HTML
           li CSS
@@ -43,10 +37,9 @@ block content
 
         h6 Contact Info
 
-        //- Replace with your own contact info - feel free to use fake information if you prefer
         ul
           li 555-555-1234
-          li email@email.com
+          li jeanene.cannon@gmail.com
 
         //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
         a.btn-link(href='') LinkedIn
