--- a/views/about.pug
+++ b/views/about.pug
@@ -42,9 +42,9 @@ block content
           li jeanene.cannon@gmail.com
 
         //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
-        a.btn-link(href='') LinkedIn
-        a.btn-link(href='') GitHub
-        a.btn-link(href='') Twitter
+        a.btn-link(href='https://www.linkedin.com/in/jeanenec') LinkedIn
+        a.btn-link(href='https://github.com/lifelearner2?tab=stars') GitHub
+        a.btn-link(href='https://twitter.com/fakepage') Twitter
 
     nav.nav
       a(href='/')
