--- a/views/about.pug
+++ b/views/about.pug
@@ -17,7 +17,7 @@ block content
 
         .about-bio
 
-          p This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
+          p I have been on a lifelong journey of helping others solve problems in different capacities. Now that journey is taking me to the wonderful world of coding. Here are a few of my projects I've worked on that highlight some of my skills as a developer. 
 
       .skills-contact-box.box
         h6 Skills
@@ -41,10 +41,9 @@ block content
           li 555-555-1234
           li jeanene.cannon@gmail.com
 
-        //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
         a.btn-link(href='https://www.linkedin.com/in/jeanenec') LinkedIn
         a.btn-link(href='https://github.com/lifelearner2?tab=stars') GitHub
-        a.btn-link(href='https://twitter.com/fakepage') Twitter
+        a.btn-link(href='https://twitter.com/fakefakepagecoder') Twitter
 
     nav.nav
       a(href='/')
