--- a/views/project.pug
+++ b/views/project.pug
@@ -38,9 +38,9 @@ block content
     .project-img-box.box
 
       //- Replace the URLs in the src attributes below with interpolated template literals to dynamically add your project images, and add descriptions to the alt attributes
-      img.project-img(src='https://placehold.it/1200x550', alt='')
-      img.project-img(src='https://placehold.it/1200x550', alt='')
-      img.project-img(src='https://placehold.it/1200x550', alt='')
+      img.project-img(src='https://placehold.it/1200x550' alt='')
+      img.project-img(src='https://placehold.it/1200x550' alt='')
+      img.project-img(src='https://placehold.it/1200x550' alt='')
       img(src=`${project.image_url}` width='320' height='240')
 
     nav.nav
