--- a/views/index.pug
+++ b/views/index.pug
@@ -4,38 +4,32 @@ block content
 
   article.portfolio-intro
 
-    //- Replace with your own heading like 'My Portfolio', or 'Hey, Potential Employers', or 'Let's make the web great together!' 
     h1 Let's make the web great together!
 
-    //- Replace with a description for your portfolio, what this project is, it's purpose, what it's supposed to accomplish, etc. 
-    p Portfolio description
-
+    p This portfolio highlights some of my skills as a developer.
 
   article.portfolio-project-thumbs
     .projects-box.box.grid
 
-      //- Use the Pug `each` iterator to loop over the projects in your data file  
-      each project in projects 
-        
+    each project in projects 
 
- a(href=`/projects/${project.id}`)
-      h2= project.Random_Quote_Generator
-      img(src=`${project.image_url}` width='320' height='240')
- 
-       .cell
-          a(href='#')
-            img.thumbnail(src='https://placehold.it/550x550', alt='')
-            h5 My Site
+      a(href=`/projects/${project.id}`)
+        h2= project.Random_Quote_Generator
+        img(src=`${project.image_url}` width='320' height='240')
+
+      .cell
+        a(href='#')
+          img.thumbnail(src='https://placehold.it/550x550' alt='')
+          h5 My Site
 
 //- Use the example Pug code below and interpolated template literals as needed to dynamically generate:
-          //- The paths in the link's href and img's src attributes
-          //- The text 'Thumbnail' interpolated with the project title for the img's alt attribute
-          //- The project title for the h5 element's text
+//- The paths in the link's href and img's src attributes
+//- The text 'Thumbnail' interpolated with the project title for the img's alt attribute
+//- The project title for the h5 element's text
 
-        .cell
-          a(href='#')
-            img.thumbnail(src='https://placehold.it/550x550', alt='')
-            h5 My Site
+  .cell
+    a(href='#')
+      img.thumbnail(src='https://placehold.it/550x550' alt='')
+      h5 My Site
 
 
- 
