--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,19 +2,19 @@
 html(lang="en" dir="ltr")
   head
     meta(charset='utf-8')
-    meta(http-equiv='x-ua-compatible', content='ie=edge')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    meta(http-equiv='x-ua-compatible' content='ie=edge')
+    meta(name='viewport' content='width=device-width, initial-scale=1.0')
     title Portfolio Site
-    link(href='https://fonts.googleapis.com/css?family=Merriweather:300,400,400i,700,800', rel='stylesheet')
-    link(rel='stylesheet', href='/static/css/normalize.css')
-    link(rel='stylesheet', href='/static/css/styles.css')
+    link(href='https://fonts.googleapis.com/css?family=Merriweather:300,400,400i,700,800' rel='stylesheet')
+    link(rel='stylesheet' href='/static/css/normalize.css')
+    link(rel='stylesheet' href='/static/css/styles.css')
 
   body
     #my-info.sidebar
       .sidebar-info-box
         br
         .thumbnail-box
-          img.thumbnail(src='https://Jeanene_Cannon_photo.jpeg/550x350', alt='Profile Pic')
+          img.thumbnail(src='https://Jeanene_Cannon_photo.jpeg/550x350' alt='Profile Pic')
         .dev-intro-box
 
           //- Replace with your name
