--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,13 +14,11 @@ html(lang="en" dir="ltr")
       .sidebar-info-box
         br
         .thumbnail-box
-          img.thumbnail(src='https://Jeanene_Cannon_photo.jpeg/550x350' alt='Profile Pic')
+          img.thumbnail(src='/static/images/JeaneneC_Profile.jpg' alt='Profile Pic')
         .dev-intro-box
 
-          //- Replace with your name
           h5 Jeanene Cannon
-
-          //- Replace with description of who you are, what you do, and why you are so awesome
+     
           p I have been on a lifelong journey of helping others solve problems in different capacities. Now that journey is taking me to the wonderful world of coding. Here are a few of my projects I've worked on that highlight some of my skills as a developer.
 
           //- Add path from your '/about' route handler to the href below
@@ -31,7 +29,6 @@ html(lang="en" dir="ltr")
         .header-info-box
           button#menu-icon.menu-icon(type='button' data-toggle='my-info')
 
-          //- Replace with your name — this is for the mobile layout
           span Jeanene Cannon
 
       block content
