--- a/views/about.pug
+++ b/views/about.pug
@@ -17,7 +17,7 @@ block content
 
         .about-bio
 
-          p I have been on a lifelong journey of helping others solve problems in different capacities. Now that journey is taking me to the wonderful world of coding. Here are a few of my projects I've worked on that highlight some of my skills as a developer. 
+          p One consistent truth about my professional journey is the common thread of service. Whether as a Social Worker, Fitness Entrepreneur or serving in a STEM program whose mission to serve African American youth aligns with mine; I believe in utilizing whatever gifts & talents I have to serve my community and contribute to the progress of those who seek to enrich their lives. My journey continues now as I am working towards earning my Full Stack JavaScript Tech Degree in hopes of utilizing my tech skills to help others in a new way. 
 
       .skills-contact-box.box
         h6 Skills
