--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block content
 
     h1 Let's make the web great together!
 
-    p This portfolio highlights some of my skills as a developer.
+    p This portfolio highlights some of my skills as a developer and these are skills that are often needed by most everyone - I can build an interactive form, a game, create web pages with pagination buttons and more...feel free to explore some of my work by clicking on a project and then click on the live demo link to try them out for yourself.
 
   article.portfolio-project-thumbs
     .projects-box.box.grid
