--- a/views/index.pug
+++ b/views/index.pug
@@ -4,8 +4,8 @@ block content
 
   article.portfolio-intro
 
-    h1 Let's make the web great together!
-
+    h1 Welcome to my page!  
+      h2 Technology is for everyone and should represent everyone!
     p This portfolio highlights some of my skills as a developer and these are skills that are often needed by most everyone - I can build an interactive form, a game, create web pages with pagination buttons and more...feel free to explore some of my work by clicking on a project and then click on the live demo link to try them out for yourself.
 
   article.portfolio-project-thumbs
