--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,6 +40,7 @@ h5{
   letter-spacing: 2.5px;
   -webkit-text-transform: uppercase;
   text-transform: uppercase;
+  color: #000000
 }
 
 h6{
@@ -137,7 +138,7 @@ nav a span {
   height: 100%;
   min-height: 100%;
   padding: 20px;
-  background: #000;
+  background: #ebbb69;
 }
 
 .sidebar-info-box {
@@ -159,7 +160,7 @@ nav a span {
 }
 
 .sidebar h5 {
-  color: #fefefe;
+  color: #000000;
   margin: 0 auto 0.5rem;
 }
 
@@ -167,7 +168,7 @@ nav a span {
   text-rendering: optimizeLegibility;
   line-height: 1.6;
   font-size: 14px;
-  color: #999
+  color: #000000
 }
 
 .sidebar a {
@@ -176,12 +177,12 @@ nav a span {
   font-size: 13px;
   letter-spacing: 2.5px;
   text-transform: uppercase;
-  color: #555;
+  color: #000000;
 }
 
 .header {
   vertical-align: middle;
-  color: #fefefe;
+  color: #000000;
   height: 40px;
   padding: 0.5rem;
   background: #0a0a0a;
