--- a/views/about.pug
+++ b/views/about.pug
@@ -16,8 +16,9 @@ block content
         p Full Stack JavaScript Developer
 
         .about-bio
-
           p One consistent truth about my professional journey is the common thread of service. Whether as a Social Worker, Fitness Entrepreneur or serving in a STEM program whose mission to serve African American youth aligns with mine; I believe in utilizing whatever gifts & talents I have to serve my community and contribute to the progress of those who seek to enrich their lives. My journey continues now as I am working towards earning my Full Stack JavaScript Tech Degree in hopes of utilizing my tech skills to help others in a new way. 
+
+           img.thumbnail(src='/static/images/jeaneneC2.jpg' alt='jeanene with laptop pic') 
 
       .skills-contact-box.box
         h6 Skills
