--- a/views/project.pug
+++ b/views/project.pug
@@ -30,14 +30,14 @@ block content
               
           each technologies in project.technologies
               li= technologies
-              
-          //- each technology, index in project.technologies []
-          //-     li= index + ': ' + technology
 
         //- Add the href values to the links below
-        a.btn-link(href=`/project/${project.id}/live_link`) Live Demo
+        a.btn-link(href=`${project.live_link}`) Live Demo
         a.btn-link(href='https://github.com/lifelearner2?tab=stars') GitHub Repo
-
+   
+        
+         
+       
     .project-img-box.box
 
       //- Replace the URLs in the src attributes below with interpolated template literals to dynamically add your project images, and add descriptions to the alt attributes
