--- a/views/project.pug
+++ b/views/project.pug
@@ -33,7 +33,7 @@ block content
 
         //- Add the href values to the links below
         a.btn-link(href=`${project.live_link}`) Live Demo
-        a.btn-link(href='https://github.com/lifelearner2?tab=stars') GitHub Repo
+        a.btn-link(href=`${project.github_link}`) GitHub Repo
    
         
          
@@ -41,8 +41,8 @@ block content
     .project-img-box.box
 
       //- Replace the URLs in the src attributes below with interpolated template literals to dynamically add your project images, and add descriptions to the alt attributes
-      img.project-img(src=`${project.image_urls[0]}` width='1000' height='550' alt='Project Image')
-      img.project-img(src=`${project.image_urls[1]}` width='1000' height='550' alt='Project Image')
+      img.project-img(src=`${project.image_urls[0]}` width='900' height='550' alt='Project Image')
+      img.project-img(src=`${project.image_urls[1]}` width='900' height='550' alt='Project Image')
      
     nav.nav
       a(href='/')
