--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block content
 
     h1 Welcome to my portfolio!  
       h2 Technology is for everyone and should represent everyone!
-    p This portfolio highlights some of my skills as a developer and these are skills that are often needed by most everyone - I can build an interactive form, a game, create web pages with pagination buttons and more...in fact, I even built this portfolio site using back end web development skills! Feel free to explore some of my work by clicking on a project below and then click on the live demo link to try them out for yourself.
+    p This portfolio highlights some of my skills as a developer and these are skills that are often needed by most everyone - I can build an interactive form, a game, create web pages with pagination buttons and more...in fact, I even built this portfolio site using back end web development skills! Some of those skills included Express, Node.js and Pug. Feel free to explore some of my work by clicking on a project below and then click on the live demo link to try them out for yourself. You can also take a look at my code in my Github Repo.
 
   article.portfolio-project-thumbs
     .projects-box.box.grid
