--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,14 +21,14 @@ body {
   font-weight: normal;
   line-height: 1.5;
   color: #0a0a0a;
-  background: #fefefe;
+  background: #fdedc8;
   background: #000;
   transform: translateX(0px);
   transition: all 0.4s ease-out;
 }
 
 article {
-  background: #fefefe;
+  background: #fdedc8;
 }
 
 h1,h2,h3,h4,h5,p{
@@ -40,7 +40,7 @@ h5{
   letter-spacing: 2.5px;
   -webkit-text-transform: uppercase;
   text-transform: uppercase;
-  color: #000000
+  color: #833c3c
 }
 
 h6{
@@ -52,7 +52,7 @@ h6{
 
 p{
   font-size: 15px;
-  color: #666;
+  color: rgb(15, 13, 13);
 }
 
 a {
@@ -64,7 +64,7 @@ a {
   min-width: 320px;
   height: 100%;
   min-height: 100%;
-  background: #fefefe;
+  background: #fdedc8;
 }
 
 .flex-row-wrap {
@@ -239,7 +239,7 @@ nav a span {
   font-size: 125%;
   margin: 0 auto;
   padding-bottom: 40px;
-  border-bottom: 1px solid #eaeaea;
+  border-bottom: 1px solid #ebbb69;
 }
 
 .projects-box h5 {
@@ -260,7 +260,7 @@ nav a span {
   width: 100%;
   min-width: 100px;
   border: 4px solid #fff;
-  box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
+  box-shadow: 0 0 0 6px rgba(170, 75, 7, 0.737);
 }
 
 
