--- a/views/page-not-found.pug
+++ b/views/page-not-found.pug
@@ -3,5 +3,4 @@ extends layout.pug
 block content
   h1= err.message
   h2= err.status
-  img(src='/static/images/JeaneneC_Profile.jpg')
-  
+  img(src='/static/images/Oops_Cat.jpg')
