--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,7 +21,7 @@ html(lang="en" dir="ltr")
 
           p I have been on a lifelong journey of helping others solve problems in different capacities. Now that journey is taking me to the wonderful world of coding. Here are a few of my projects I've worked on that highlight some of my skills as a developer.
 
-          a(href='./about') Learn More &rarr;
+          a(href='/about') Learn More &rarr;
 
          
 
