Adding lines of "credit"
Added comments giving credit to Student Support Specialist, Brian Jenson, for a couple of advanced lines of code for extra features I wanted to do.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -251,7 +251,10 @@ nav a span {
   color: #222;;
   margin: 0 auto 8px;
 }
-
+/* 
+the color line below was added, courtesy of Treehouse Student Support Specialist, because I wanted to get rid of the 
+default purple "clicked" text from google on my project text.
+*/
 .cell a {
   width: 100%;
   color:rgba(170, 75, 7, 0.737)
