--- a/views/project.pug
+++ b/views/project.pug
@@ -23,7 +23,7 @@ block content
         a.btn-link(href=`${project.live_link}`) Live Demo
         a.btn-link(href=`${project.github_link}`) GitHub Repo      
     
-    //the code below was provided by Treehouse Student Support Specialist, Brian Jenson
+    //the code below was provided by Treehouse Student Support Specialist, Brian Jensen
     //I originally had dynamically interpolated two images per project to populate, but one of my projects has 5 so this code made all images for all projects to populate.
     .project-img-box.box
        -var n = 0;
