--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -252,7 +252,7 @@ nav a span {
   margin: 0 auto 8px;
 }
 /* 
-the color line below was added, courtesy of Treehouse Student Support Specialist, Brian Jenson, because I wanted to get rid of the 
+the color line below was added, courtesy of Treehouse Student Support Specialist, Brian Jensen, because I wanted to get rid of the 
 default purple "clicked" text from google on my project text.
 */
 .cell a {
